[package]
name    = "quwue"
version = "0.0.0"
authors = ["Casey Rodarmor <casey@rodarmor.com>"]
edition = "2018"
publish = false

[workspace]
members  = ["crates/*"]
resolver = "2"

[dependencies]
ansi_term               = "0.12.1"
async-trait             = "0.1.51"
futures-util            = "0.3.12"
lazy_static             = "1.4.0"
once_cell               = "1.5.2"
snafu                   = "0.6.9"
structopt               = "0.3.21"
tracing                 = "0.1.21"
tracing-appender        = "0.1.1"
tracing-futures         = "0.2.4"
tracing-log             = "0.1.1"
tracing-subscriber      = "0.2.15"
twilight-cache-inmemory = "0.6.0"
twilight-gateway        = "0.6.0"
twilight-model          = "0.6.0"
url                     = "2.2.1"

db      = { path = "crates/db"      }
discord = { path = "crates/discord" }
model   = { path = "crates/model"   }

[dependencies.sqlx]
version  = "0.5.1"
features = ["runtime-tokio-rustls", "sqlite", "offline"]

[dependencies.serde]
version  = "1.0.0"
features = ["derive"]

[dependencies.tokio]
version          = "1.0.0"
default-features = false
features         = ["net", "rt", "sync", "rt-multi-thread", "macros", "time", "parking_lot"]

[dependencies.twilight-http]
version  = "0.6.1"
features = ["tracing"]

[dev-dependencies]
futures    = "0.3.8"
http       = "0.2.1"
serde_json = "1.0.59"
tempfile   = "3.2.0"

[dev-dependencies.test-env-log]
version          = "0.2.2"
default-features = false
features         = ["trace"]
