[package]
name    = "bot"
version = "0.0.0"
authors = ["Casey Rodarmor <casey@rodarmor.com>"]
edition = "2018"
publish = false

[dependencies]
ansi_term               = "0.12.1"
futures-util            = "0.3.12"
lazy_static             = "1.4.0"
once_cell               = "1.5.2"
snafu                   = "0.6.9"
tracing                 = "0.1.21"
tracing-appender        = "0.1.1"
tracing-futures         = "0.2.4"
tracing-log             = "0.1.1"
tracing-subscriber      = "0.2.15"
twilight-cache-inmemory = "0.3.0"
twilight-gateway        = "0.3.0"
twilight-http           = "0.3.0"
twilight-model          = "0.3.0"

db      = { path = "../db"      }
discord = { path = "../discord" }
model   = { path = "../model"   }

[dependencies.sqlx]
version  = "0.5.1"
features = ["runtime-tokio-rustls", "sqlite", "offline"]

[dependencies.tokio]
version          = "1.0.0"
default-features = false
features         = ["net", "rt", "sync", "rt-multi-thread", "macros", "time"]

[dev-dependencies]
futures     = "0.3.8"
http        = "0.2.1"
serde_json  = "1.0.59"

[dev-dependencies.serde]
version  = "1.0.0"
features = ["derive"]

[dev-dependencies.test-env-log]
version          = "0.2.2"
default-features = false
features         = ["trace"]
