[package]
name    = "db"
version = "0.0.0"
authors = ["Casey Rodarmor <casey@rodarmor.com>"]
edition = "2018"
publish = false

[dependencies]
num_enum       = "0.5.1"
serde_json     = "1.0.0"
snafu          = "0.6.9"
twilight-model = "0.3.0"
url            = "2.2.1"

model = { path = "../model" }

[dependencies.sqlx]
version  = "0.5.1"
features = ["runtime-tokio-rustls", "sqlite"]

[dependencies.tokio]
version          = "1.0.0"
default-features = false
features         = ["net", "rt", "sync", "rt-multi-thread", "macros", "time"]

[build-dependencies]
camino = "1.0.4"

[build-dependencies.sqlx]
version  = "0.5.1"
features = ["runtime-tokio-rustls", "sqlite"]

[build-dependencies.tokio]
version          = "1.0.0"
default-features = false
features         = ["net", "rt", "sync", "rt-multi-thread", "macros", "time"]

[dev-dependencies.criterion]
version  = "0.3"
features = ["async_tokio", "html_reports"]

[[bench]]
name    = "user"
harness = false
