[package]
name    = "db"
version = "0.0.0"
authors = ["Casey Rodarmor <casey@rodarmor.com>"]
edition = "2018"
publish = false

[dependencies]
num_enum       = "0.5.1"
snafu          = "0.6.9"
twilight-model = "0.3.0"
url            = "2.2.1"

model  = { path = "../model"  }
db-url = { path = "../db-url" }

[dependencies.sqlx]
version  = "0.5.1"
features = ["runtime-tokio-rustls", "sqlite"]

[dependencies.tokio]
version          = "1.0.0"
default-features = false
features         = ["net", "rt", "sync", "rt-multi-thread", "macros", "time"]

[build-dependencies.db-url]
path = "../db-url"

[build-dependencies.sqlx]
version  = "0.5.1"
features = ["runtime-tokio-rustls", "sqlite"]

[build-dependencies.tokio]
version          = "1.0.0"
default-features = false
features         = ["net", "rt", "sync", "rt-multi-thread", "macros", "time"]

[dev-dependencies]
guard    = "0.5.1"
tempfile = "3.2.0"

[dev-dependencies.criterion]
version  = "0.3"
features = ["async_tokio", "html_reports"]

[[bench]]
name    = "user"
harness = false
