[package]
name    = "model"
version = "0.0.0"
authors = ["Casey Rodarmor <casey@rodarmor.com>"]
edition = "2018"
publish = false

[dependencies]
num_enum       = "0.5.1"
twilight-http  = "0.3.0"
twilight-model = "0.3.0"
url            = "2.2.1"

[dependencies.serde]
version  = "1.0"
features = ["derive"]

[dependencies.strum]
version  = "0.20"
features = ["derive"]
